Rename the function that get upload information
The function is renamed `ItemManager::getUploadFileInformation()`.
The old one, `ItemManager::uploadItem()`, is deprecated and will be removed in next major version.
